Update .gitignore to include install.log and installation scripts. Modify docker-compose.yml to use environment variables for database configuration and add health checks for services. Enhance README.md with new installation methods, requirements, and improved instructions for setting up the project.

--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,7 @@ cache/*
 *~
 .DS_Store
 Thumbs.db
+install.log
 
 # IDE
 .idea/
@@ -30,3 +31,10 @@ docker-compose.override.yml
 
 # Системные файлы
 blob/1
+
+# Скрипты установки (оставляем в репозитории)
+# install.sh
+# install-tui.sh
+# quick_start.sh
+# uninstall.sh
+# scripts/
