--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,7 @@ services:
             start_period: 30s
 
     webserver:
-        image: 'nginx:alpine'
+        image: 'nginx:1.25-alpine'
         working_dir: /application
         volumes:
             - './application:/application'
@@ -47,6 +47,7 @@ services:
             - FLIBUSTA_DBNAME=${FLIBUSTA_DBNAME:-flibusta}
             - FLIBUSTA_DBTYPE=${FLIBUSTA_DBTYPE:-postgres}
             - FLIBUSTA_DBHOST=${FLIBUSTA_DBHOST:-postgres}
+            - FLIBUSTA_PHP_VERSION=${FLIBUSTA_PHP_VERSION:-8.2}
             - FLIBUSTA_DBPASSWORD_FILE=/run/secrets/FLIBUSTA_PWD
         secrets:
             - FLIBUSTA_PWD
@@ -54,7 +55,7 @@ services:
             postgres:
                 condition: service_healthy
         healthcheck:
-            test: ["CMD-SHELL", "php-fpm-healthcheck || php -r 'exit(fastcgi_finish_request() ? 0 : 1);' || exit 1"]
+            test: ["CMD-SHELL", "php-fpm-healthcheck"]
             interval: 30s
             timeout: 10s
             retries: 3
