--- a/phpdocker/nginx/nginx.conf
+++ b/phpdocker/nginx/nginx.conf
@@ -3,8 +3,15 @@ server {
 
     client_max_body_size 508M;
 
-    access_log /var/log/nginx/application.access.log;
+    # Gzip сжатие
+    gzip on;
+    gzip_vary on;
+    gzip_proxied any;
+    gzip_comp_level 6;
+    gzip_types text/plain text/css text/xml text/javascript application/json application/javascript application/xml+rss text/javascript application/x-javascript application/rss+xml;
+    gzip_disable "msie6";
 
+    access_log /var/log/nginx/application.access.log;
 
     root /application/public;
     index index.php;
@@ -14,13 +21,9 @@ server {
         try_files $uri /index.php$is_args$args;
     }
 
-    if (!-e $request_filename) {
-        rewrite ^.*$ /index.php last;
-    }
-
     location ~ \.php$ {
 add_header 'Content-Security-Policy' 'worker-src * blob:';
-	
+
         fastcgi_pass php-fpm:9000;
         fastcgi_index index.php;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
@@ -30,4 +33,18 @@ add_header 'Content-Security-Policy' 'worker-src * blob:';
         include fastcgi_params;
     }
     
+    # Кэширование статических файлов
+    location ~* \.(jpg|jpeg|png|gif|ico|css|js|svg|woff|woff2|ttf|eot|otf)$ {
+        expires 1y;
+        access_log off;
+        add_header Cache-Control "public, immutable";
+    }
+
+    # Блокировка доступа к системным файлам
+    location ~ /\. {
+        deny all;
+        access_log off;
+        log_not_found off;
+    }
 }
+
