--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,7 +24,7 @@ services:
         volumes:
             - './application:/application'
             - './cache:/application/cache'
-            - './Flibusta.Net:/application/flibusta'
+            - '${FLIBUSTA_BOOKS_PATH:-./Flibusta.Net}:/application/flibusta'
             - './phpdocker/nginx/nginx.conf:/etc/nginx/conf.d/default.conf'
         ports:
             - '${FLIBUSTA_PORT:-27100}:80'
@@ -38,8 +38,8 @@ services:
         volumes:
             - './application:/application'
             - './cache:/application/cache'
-            - './Flibusta.Net:/application/flibusta'
-            - './FlibustaSQL:/application/sql'
+            - '${FLIBUSTA_BOOKS_PATH:-./Flibusta.Net}:/application/flibusta'
+            - '${FLIBUSTA_SQL_PATH:-./FlibustaSQL}:/application/sql'
             - './phpdocker/php-fpm/php-ini-overrides.ini:/usr/local/etc/php/conf.d/local-custom.ini'
             - './phpdocker/php-fpm/php-fpm.conf:/usr/local/etc/php-fpm.d/zz-php-fpm.conf'
         environment:
