--- a/phpdocker/php-fpm/Dockerfile
+++ b/phpdocker/php-fpm/Dockerfile
@@ -1,4 +1,6 @@
-FROM php:8.1-fpm-alpine@sha256:a4a7d7f277f087a709822729d68140887826c0f33b3d8f3c287e735958c4e5b38d46d1f9b6634b8b3a7
+ARG PHP_VERSION=8.2
+
+FROM php:${PHP_VERSION}-fpm-alpine
 
 ADD https://github.com/mlocati/docker-php-extension-installer/releases/latest/download/install-php-extensions /usr/local/bin/
 
