--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -58,7 +58,7 @@ services:
             postgres:
                 condition: service_healthy
         healthcheck:
-            test: ["CMD-SHELL", "php-fpm-healthcheck"]
+            test: ["CMD-SHELL", "php-fpm status"]
             interval: 30s
             timeout: 10s
             retries: 3
