--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -58,7 +58,7 @@ services:
             postgres:
                 condition: service_healthy
         healthcheck:
-            test: ["CMD-SHELL", "php-fpm status"]
+            test: ["CMD-SHELL", "php-fpm -t 2>/dev/null && pg_isready -U ${FLIBUSTA_DBUSER:-flibusta} -h ${FLIBUSTA_DBHOST:-postgres} -d ${FLIBUSTA_DBNAME:-flibusta} || exit 1"]
             interval: 30s
             timeout: 10s
             retries: 3
