--- a/phpdocker/nginx/nginx.conf
+++ b/phpdocker/nginx/nginx.conf
@@ -11,18 +11,68 @@ server {
     gzip_types text/plain text/css text/xml text/javascript application/json application/javascript application/xml+rss text/javascript application/x-javascript application/rss+xml;
     gzip_disable "msie6";
 
+    # Rate limiting для защиты от DoS атак
+    # Зона для rate limiting: 10 запросов в секунду на IP
+    limit_req_zone $binary_remote_addr zone=general:10m rate=10r/s;
+    
+    # Более строгий лимит для API и OPDS (20 запросов в секунду)
+    limit_req_zone $binary_remote_addr zone=api:10m rate=20r/s;
+    
+    # Ограничение количества соединений (burst 50, 30 соединений в секунду)
+    limit_conn_zone $binary_remote_addr zone=conn_limit:10m;
+    limit_conn conn_limit 30;
+
     access_log /var/log/nginx/application.access.log;
 
     root /application/public;
     index index.php;
 
+    # HTTP Security Headers
+    add_header X-Frame-Options "SAMEORIGIN" always;
+    add_header X-Content-Type-Options "nosniff" always;
+    add_header X-XSS-Protection "1; mode=block" always;
+    add_header Referrer-Policy "strict-origin-when-cross-origin" always;
+    add_header Permissions-Policy "geolocation=(self), camera=(), microphone=()" always;
+    add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
+
+    # CSP (Content Security Policy) - только для worker-src (требуется для PDF viewer)
+    add_header 'Content-Security-Policy' 'default-src * data: blob:; script-src *; style-src * unsafe-inline; img-src * data: blob:; font-src *; connect-src *; worker-src * blob:; frame-src *;' always;
+
+    # HSTS (только если используется HTTPS, для HTTP это предупреждение)
+    # add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always;
+
     # try to serve file directly, fallback to index.php
     location / {
+        # Применяем rate limiting к general локации
+        limit_req zone=general burst=20 nodelay;
+        limit_conn conn_limit 10;
+        
         try_files $uri /index.php$is_args$args;
     }
 
+    # OPDS API - более строгий rate limiting
+    location /opds/ {
+        limit_req zone=api burst=50 nodelay;
+        limit_conn conn_limit 15;
+        
+        try_files $uri /index.php$is_args$args;
+    }
+
+    # Сервисная локация - более строгий rate limiting
+    location /service/ {
+        limit_req zone=api burst=10 nodelay;
+        limit_conn conn_limit 5;
+        
+        try_files $uri /index.php$is_args$args;
+    }
+
+    # PHP обработчик
     location ~ \.php$ {
-add_header 'Content-Security-Policy' 'worker-src * blob:';
+        # Стандартный rate limiting
+        limit_req zone=general burst=20 nodelay;
+        limit_conn conn_limit 10;
+        
+        add_header 'Content-Security-Policy' 'worker-src * blob:';
 
         fastcgi_pass php-fpm:9000;
         fastcgi_index index.php;
@@ -31,6 +81,10 @@ add_header 'Content-Security-Policy' 'worker-src * blob:';
         fastcgi_buffers 16 16k;
         fastcgi_buffer_size 32k;
         include fastcgi_params;
+        
+        # Таймауты для PHP
+        fastcgi_read_timeout 300;
+        fastcgi_send_timeout 300;
     }
     
     # Кэширование статических файлов
@@ -38,6 +92,9 @@ add_header 'Content-Security-Policy' 'worker-src * blob:';
         expires 1y;
         access_log off;
         add_header Cache-Control "public, immutable";
+        
+        # Не применяем rate limiting к статике
+        limit_rate 0;
     }
 
     # Блокировка доступа к системным файлам
@@ -46,5 +103,47 @@ add_header 'Content-Security-Policy' 'worker-src * blob:';
         access_log off;
         log_not_found off;
     }
-}
 
+    # Запрет доступа к .git и .env
+    location ~ /\.(?:git|env|htaccess)$ {
+        deny all;
+        access_log off;
+        log_not_found off;
+    }
+
+    # Защита от сканирования уязвимостей (блокировка распространенных путей атак)
+    location ~* \.(?:bak|config|sql|fla|psw|ini|log|sh|inc|swp)$ {
+        deny all;
+        access_log off;
+        log_not_found off;
+    }
+
+    # Обработка ошибок rate limiting
+    error_page 429 /429.html;
+    location = /429.html {
+        root /var/www/html;
+        internal;
+        default_type text/plain;
+        return 429 "Too Many Requests - Slow down!";
+    }
+
+    # Health check endpoint (без rate limiting)
+    location /health {
+        access_log off;
+        return 200 "OK";
+        add_header Content-Type text/plain;
+        limit_rate 0;
+    }
+
+    # Nginx status для мониторинга (опционально, защищаем)
+    location /nginx_status {
+        stub_status on;
+        access_log off;
+        # Разрешить только с localhost (настроить для production)
+        allow 127.0.0.1;
+        allow 172.16.0.0/12;
+        allow 10.0.0.0/8;
+        deny all;
+        limit_rate 0;
+    }
+}
