Update Docker Compose and Nginx configuration for improved service management and security. Modify Nginx settings to enhance rate limiting, security headers, and error handling. Adjust Docker Compose to correctly mount Nginx configuration and add persistent storage for Prometheus data.

--- a/phpdocker/nginx/nginx.conf
+++ b/phpdocker/nginx/nginx.conf
@@ -1,149 +1,180 @@
-server {
-    listen 80 default;
+# Nginx конфигурация для Flibusta
+worker_processes auto;
+error_log /var/log/nginx/error.log warn;
+pid /var/run/nginx.pid;
 
-    client_max_body_size 508M;
+events {
+    worker_connections 2048;
+    use epoll;
+    multi_accept on;
+}
 
-    # Gzip сжатие
-    gzip on;
-    gzip_vary on;
-    gzip_proxied any;
-    gzip_comp_level 6;
-    gzip_types text/plain text/css text/xml text/javascript application/json application/javascript application/xml+rss text/javascript application/x-javascript application/rss+xml;
-    gzip_disable "msie6";
+http {
+    # Basic settings
+    sendfile on;
+    tcp_nopush on;
+    tcp_nodelay on;
+    keepalive_timeout 65;
+    types_hash_max_size 2048;
+    server_tokens off;
 
-    # Rate limiting для защиты от DoS атак
-    # Зона для rate limiting: 10 запросов в секунду на IP
+    include /etc/nginx/mime.types;
+    default_type application/octet-stream;
+
+    # Logging
+    log_format main '$remote_addr - $remote_user [$time_local] "$request" '
+                    '$status $body_bytes_sent "$http_referer" '
+                    '"$http_user_agent" "$http_x_forwarded_for" '
+                    'rt=$request_time uct="$upstream_connect_time" '
+                    'uht="$upstream_header_time" urt="$upstream_response_time"';
+
+    access_log /var/log/nginx/application.access.log main;
+
+    # Rate limiting зоны для защиты от DoS атак
+    # Зона для general: 10 запросов в секунду на IP
     limit_req_zone $binary_remote_addr zone=general:10m rate=10r/s;
     
     # Более строгий лимит для API и OPDS (20 запросов в секунду)
     limit_req_zone $binary_remote_addr zone=api:10m rate=20r/s;
     
-    # Ограничение количества соединений (burst 50, 30 соединений в секунду)
+    # Ограничение количества соединений
     limit_conn_zone $binary_remote_addr zone=conn_limit:10m;
-    limit_conn conn_limit 30;
 
-    access_log /var/log/nginx/application.access.log;
+    # Основной виртуальный хост
+    server {
+        listen 80 default;
 
-    root /application/public;
-    index index.php;
+        client_max_body_size 508M;
 
-    # HTTP Security Headers
-    add_header X-Frame-Options "SAMEORIGIN" always;
-    add_header X-Content-Type-Options "nosniff" always;
-    add_header X-XSS-Protection "1; mode=block" always;
-    add_header Referrer-Policy "strict-origin-when-cross-origin" always;
-    add_header Permissions-Policy "geolocation=(self), camera=(), microphone=()" always;
-    add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
+        # Gzip сжатие
+        gzip on;
+        gzip_vary on;
+        gzip_proxied any;
+        gzip_comp_level 6;
+        gzip_types text/plain text/css text/xml text/javascript application/json application/javascript application/xml+rss text/javascript application/x-javascript application/rss+xml;
+        gzip_disable "msie6";
 
-    # CSP (Content Security Policy) - только для worker-src (требуется для PDF viewer)
-    add_header 'Content-Security-Policy' 'default-src * data: blob:; script-src *; style-src * unsafe-inline; img-src * data: blob:; font-src *; connect-src *; worker-src * blob:; frame-src *;' always;
+        root /application/public;
+        index index.php;
 
-    # HSTS (только если используется HTTPS, для HTTP это предупреждение)
-    # add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always;
+        # HTTP Security Headers
+        add_header X-Frame-Options "SAMEORIGIN" always;
+        add_header X-Content-Type-Options "nosniff" always;
+        add_header X-XSS-Protection "1; mode=block" always;
+        add_header Referrer-Policy "strict-origin-when-cross-origin" always;
+        add_header Permissions-Policy "geolocation=(self), camera=(), microphone=()" always;
+        add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
 
-    # try to serve file directly, fallback to index.php
-    location / {
-        # Применяем rate limiting к general локации
-        limit_req zone=general burst=20 nodelay;
-        limit_conn conn_limit 10;
+        # CSP (Content Security Policy) - только для worker-src (требуется для PDF viewer)
+        add_header 'Content-Security-Policy' 'default-src * data: blob:; script-src *; style-src * unsafe-inline; img-src * data: blob:; font-src *; connect-src *; worker-src * blob:; frame-src *;' always;
+
+        # HSTS (только если используется HTTPS, для HTTP это предупреждение)
+        # add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always;
+
+        # try to serve file directly, fallback to index.php
+        location / {
+            # Применяем rate limiting к general локации
+            limit_req zone=general burst=20 nodelay;
+            limit_conn conn_limit 10;
+            
+            try_files $uri /index.php$is_args$args;
+        }
+
+        # OPDS API - более строгий rate limiting
+        location /opds/ {
+            limit_req zone=api burst=50 nodelay;
+            limit_conn conn_limit 15;
+            
+            try_files $uri /index.php$is_args$args;
+        }
+
+        # Сервисная локация - более строгий rate limiting
+        location /service/ {
+            limit_req zone=api burst=10 nodelay;
+            limit_conn conn_limit 5;
+            
+            try_files $uri /index.php$is_args$args;
+        }
+
+        # PHP обработчик
+        location ~ \.php$ {
+            # Стандартный rate limiting
+            limit_req zone=general burst=20 nodelay;
+            limit_conn conn_limit 10;
+            
+            add_header 'Content-Security-Policy' 'worker-src * blob:';
+
+            fastcgi_pass php-fpm:9000;
+            fastcgi_index index.php;
+            fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+            fastcgi_param PHP_VALUE "error_log=/var/log/nginx/application_php_errors.log";
+            fastcgi_buffers 16 16k;
+            fastcgi_buffer_size 32k;
+            include fastcgi_params;
+            
+            # Таймауты для PHP
+            fastcgi_read_timeout 300;
+            fastcgi_send_timeout 300;
+        }
         
-        try_files $uri /index.php$is_args$args;
-    }
+        # Кэширование статических файлов
+        location ~* \.(jpg|jpeg|png|gif|ico|css|js|svg|woff|woff2|ttf|eot|otf)$ {
+            expires 1y;
+            access_log off;
+            add_header Cache-Control "public, immutable";
+            
+            # Не применяем rate limiting к статике
+            limit_rate 0;
+        }
 
-    # OPDS API - более строгий rate limiting
-    location /opds/ {
-        limit_req zone=api burst=50 nodelay;
-        limit_conn conn_limit 15;
-        
-        try_files $uri /index.php$is_args$args;
-    }
+        # Блокировка доступа к системным файлам
+        location ~ /\. {
+            deny all;
+            access_log off;
+            log_not_found off;
+        }
 
-    # Сервисная локация - более строгий rate limiting
-    location /service/ {
-        limit_req zone=api burst=10 nodelay;
-        limit_conn conn_limit 5;
-        
-        try_files $uri /index.php$is_args$args;
-    }
+        # Запрет доступа к .git и .env
+        location ~ /\.(?:git|env|htaccess)$ {
+            deny all;
+            access_log off;
+            log_not_found off;
+        }
 
-    # PHP обработчик
-    location ~ \.php$ {
-        # Стандартный rate limiting
-        limit_req zone=general burst=20 nodelay;
-        limit_conn conn_limit 10;
-        
-        add_header 'Content-Security-Policy' 'worker-src * blob:';
+        # Защита от сканирования уязвимостей (блокировка распространенных путей атак)
+        location ~* \.(?:bak|config|sql|fla|psw|ini|log|sh|inc|swp)$ {
+            deny all;
+            access_log off;
+            log_not_found off;
+        }
 
-        fastcgi_pass php-fpm:9000;
-        fastcgi_index index.php;
-        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-        fastcgi_param PHP_VALUE "error_log=/var/log/nginx/application_php_errors.log";
-        fastcgi_buffers 16 16k;
-        fastcgi_buffer_size 32k;
-        include fastcgi_params;
-        
-        # Таймауты для PHP
-        fastcgi_read_timeout 300;
-        fastcgi_send_timeout 300;
-    }
-    
-    # Кэширование статических файлов
-    location ~* \.(jpg|jpeg|png|gif|ico|css|js|svg|woff|woff2|ttf|eot|otf)$ {
-        expires 1y;
-        access_log off;
-        add_header Cache-Control "public, immutable";
-        
-        # Не применяем rate limiting к статике
-        limit_rate 0;
-    }
+        # Обработка ошибок rate limiting
+        error_page 429 /429.html;
+        location = /429.html {
+            root /var/www/html;
+            internal;
+            default_type text/plain;
+            return 429 "Too Many Requests - Slow down!";
+        }
 
-    # Блокировка доступа к системным файлам
-    location ~ /\. {
-        deny all;
-        access_log off;
-        log_not_found off;
-    }
+        # Health check endpoint (без rate limiting)
+        location /health {
+            access_log off;
+            return 200 "OK";
+            add_header Content-Type text/plain;
+            limit_rate 0;
+        }
 
-    # Запрет доступа к .git и .env
-    location ~ /\.(?:git|env|htaccess)$ {
-        deny all;
-        access_log off;
-        log_not_found off;
-    }
-
-    # Защита от сканирования уязвимостей (блокировка распространенных путей атак)
-    location ~* \.(?:bak|config|sql|fla|psw|ini|log|sh|inc|swp)$ {
-        deny all;
-        access_log off;
-        log_not_found off;
-    }
-
-    # Обработка ошибок rate limiting
-    error_page 429 /429.html;
-    location = /429.html {
-        root /var/www/html;
-        internal;
-        default_type text/plain;
-        return 429 "Too Many Requests - Slow down!";
-    }
-
-    # Health check endpoint (без rate limiting)
-    location /health {
-        access_log off;
-        return 200 "OK";
-        add_header Content-Type text/plain;
-        limit_rate 0;
-    }
-
-    # Nginx status для мониторинга (опционально, защищаем)
-    location /nginx_status {
-        stub_status on;
-        access_log off;
-        # Разрешить только с localhost (настроить для production)
-        allow 127.0.0.1;
-        allow 172.16.0.0/12;
-        allow 10.0.0.0/8;
-        deny all;
-        limit_rate 0;
+        # Nginx status для мониторинга (опционально, защищаем)
+        location /nginx_status {
+            stub_status on;
+            access_log off;
+            # Разрешить только с локальных сетей Docker
+            allow 127.0.0.1;
+            allow 172.16.0.0/12;
+            allow 10.0.0.0/8;
+            deny all;
+            limit_rate 0;
+        }
     }
 }
