--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,11 +35,12 @@ services:
     webserver:
         image: 'nginx:1.25-alpine'
         working_dir: /application
+        command: nginx -c /etc/nginx/nginx.conf
         volumes:
             - './application:/application'
             - './cache:/application/cache'
             - '${FLIBUSTA_BOOKS_PATH:-./Flibusta.Net}:/application/flibusta'
-            - './phpdocker/nginx/nginx.conf:/etc/nginx/conf.d/default.conf'
+            - './phpdocker/nginx/nginx.conf:/etc/nginx/nginx.conf'
         ports:
             - '${FLIBUSTA_PORT:-27100}:80'
         depends_on:
@@ -114,6 +115,7 @@ services:
         volumes:
             - './application:/application'
             - './configs/prometheus:/etc/prometheus'
+            - 'prometheus-data:/prometheus'
         command:
             - '--config.file=/etc/prometheus/prometheus.yml'
             - '--storage.tsdb.path=/prometheus'
@@ -183,7 +185,7 @@ services:
 volumes:
     db-data:
     backup:
-    configs-prometheus:
+    prometheus-data:
 secrets:
     FLIBUSTA_PWD:
         file: ./secrets/flibusta_pwd.txt
