--- a/phpdocker/nginx/nginx.conf
+++ b/phpdocker/nginx/nginx.conf
@@ -51,7 +51,7 @@ http {
         gzip_vary on;
         gzip_proxied any;
         gzip_comp_level 6;
-        gzip_types text/plain text/css text/xml text/javascript application/json application/javascript application/xml+rss text/javascript application/x-javascript application/rss+xml;
+        gzip_types text/plain text/css text/xml text/javascript application/json application/javascript application/xml+rss application/x-javascript application/rss+xml;
         gzip_disable "msie6";
 
         root /application/public;
