Update Docker Compose healthcheck settings and enhance PHP-FPM configuration for improved performance and logging. Adjust healthcheck intervals and timeouts, and implement dynamic process management in PHP-FPM with detailed logging for slow requests.

--- a/phpdocker/php-fpm/php-fpm.conf
+++ b/phpdocker/php-fpm/php-fpm.conf
@@ -1,4 +1,24 @@
+; PHP-FPM конфигурация для продакшен
 php_flag[display_errors] = off
 php_admin_flag[log_errors] = on
+
 [www]
-pm.max_children = 10
+; Процессы должны динамически меняться в зависимости от нагрузки
+pm = dynamic
+pm.max_children = 50
+pm.start_servers = 5
+pm.min_spare_servers = 5
+pm.max_spare_servers = 10
+pm.max_requests = 500
+
+; Таймауты для предотвращения зависания процессов
+request_terminate_timeout = 300
+request_slowlog_timeout = 300
+
+; Логирование медленных запросов
+slowlog = /var/log/php-fpm-slow.log
+request_slowlog_timeout = 5s
+
+; Логирование
+access.log = /var/log/php-fpm-access.log
+access.format = "%R - %u %t \"%m %r%Q%q\" %s %f %{mili}d %{kilo}M %C%%"
