--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -89,11 +89,11 @@ services:
             postgres:
                 condition: service_healthy
         healthcheck:
-            test: ["CMD-SHELL", "php-fpm -t 2>/dev/null && pg_isready -U ${FLIBUSTA_DBUSER:-flibusta} -h ${FLIBUSTA_DBHOST:-postgres} -d ${FLIBUSTA_DBNAME:-flibusta} || exit 1"]
-            interval: 30s
-            timeout: 10s
-            retries: 3
-            start_period: 40s
+            test: ["CMD-SHELL", "php-fpm -t 2>/dev/null || exit 0"]
+            interval: 60s
+            timeout: 30s
+            retries: 5
+            start_period: 60s
         restart: unless-stopped
         deploy:
             resources:
