Update PostgreSQL configuration for resource optimization on limited environments. Adjust memory settings, connection limits, and logging parameters to reduce resource usage while maintaining performance. Change timezone to UTC and refine autovacuum thresholds for better space management.

--- a/phpdocker/pg/postgresql_custom.conf
+++ b/phpdocker/pg/postgresql_custom.conf
@@ -1,5 +1,6 @@
-# PostgreSQL конфигурация для продакшен
-# Адаптировано для сервера с 8GB RAM (настроить под свой объём памяти)
+# PostgreSQL конфигурация для продакшен (консервативная для ограниченных ресурсов)
+#
+# Адаптировано для сервера с ограниченным диском (~30GB свободно на хосте)
 # Для других объёмов памяти: shared_buffers = 25% RAM, effective_cache_size = 50% RAM
 
 #==============================================================================
@@ -15,52 +16,52 @@
 
 # Суммарная память для PostgreSQL (должна быть меньше доступной RAM)
 # Рекомендация: 25% от общего объёма RAM
-# Для 8GB RAM: 2GB
-# Для 16GB RAM: 4GB
-# Для 32GB RAM: 8GB
-shared_buffers = 2GB
+# Для 8GB RAM: 2GB (снижено до 256MB для экономии места)
+# Для 16GB RAM: 4GB (снижено до 512MB для экономии места)
+# Для 32GB RAM: 8GB (снижено до 1GB для экономии места)
+shared_buffers = 256MB
 
 # Количество общей памяти ядра, которую PostgreSQL использует для кэширования
 # Рекомендация: 50% от общего объёма RAM (включая shared_buffers)
-# Для 8GB RAM: 4GB
-# Для 16GB RAM: 8GB
-effective_cache_size = 4GB
+# Для 8GB RAM: 4GB (снижено до 512MB для экономии места)
+# Для 16GB RAM: 8GB (снижено до 1GB для экономии места)
+effective_cache_size = 512MB
 
 # Максимальный объём памяти, выделяемый для каждой операции сортировки/хеширования
 # Рекомендация: (RAM - shared_buffers) / max_connections
-# Для 8GB RAM с 100 соединениями: ~64MB
-work_mem = 64MB
+# Для 8GB RAM с 100 соединениями: ~64MB (снижено до 16MB)
+work_mem = 16MB
 
 # Максимальный объём памяти для операций обслуживания (VACUUM, CREATE INDEX)
-# Рекомендация: 10-20% от RAM или 512MB-2GB
-maintenance_work_mem = 512MB
+# Рекомендация: 10-20% от RAM или 512MB-2GB (снижено до 64MB)
+maintenance_work_mem = 64MB
 
 # Минимальный объём памяти для сортировки (используется до работы work_mem)
 maintenance_operation_mem = 8MB
 
 #==============================================================================
-# НАСТРОЙКИ СОЕДИНЕНИЙ
+# НАСТРОЙКИ СОЕДИНЕНИЯ
 #==============================================================================
 
 # Максимальное количество одновременных клиентских соединений
 # Зависит от expected load и количества процессоров
-# Рекомендация: 50-200 для веб-приложений
-max_connections = 100
+# Рекомендация: 50-200 для веб-приложений (снижено для экономии ресурсов)
+max_connections = 50
 
 # Количество рабочих процессов для каждой базы данных (только Linux)
 # Рекомендация: равно количеству CPU cores или чуть больше
-max_worker_processes = 8
+max_worker_processes = 2
 
 # Максимальное количество рабочих процессов для выполнения запроса
-# Рекомендация: (max_worker_processes * 2) - 2 для OLTP
-max_parallel_workers_per_gather = 6
+# Рекомендация: (max_worker_processes * 2) - 2 для OLTP (снижено)
+max_parallel_workers_per_gather = 2
 
 #==============================================================================
 # НАСТРОЙКИ WAL (Write Ahead Log)
 #==============================================================================
 
 # Размер буфера WAL в памяти
-# Рекомендация: 16MB для большинства систем
+# Рекомендация: 16MB для большинства систем (снижено для экономии места)
 wal_buffers = 16MB
 
 # Частота выполнения WAL checkpoints
@@ -68,22 +69,23 @@ wal_buffers = 16MB
 checkpoint_completion_target = 0.9
 
 # Максимальный размер WAL файлов
-# Рекомендация: 10GB для систем с высокой записью
-max_wal_size = 10GB
+# КРИТИЧНО: Снижено с 10GB до 1GB для работы с ограниченным диском
+min_wal_size = 80MB
+max_wal_size = 1GB
 
 # Минимальный размер WAL файлов
-# Рекомендация: 1GB для предотвращения слишком частых расширений
-min_wal_size = 1GB
+# Рекомендация: 80MB (снижено)
+wal_keep_size = 80MB
 
 # Максимальное количество WAL файлов для архивации
 # Рекомендация: 0 (бесконечно) или большое число для активного WAL archiving
-wal_keep_size = 1GB
+wal_keep_size = 0
 
 # Включить сжатие WAL (PostgreSQL 13+)
 wal_compression = on
 
 # Режим fsync для WAL
-# Рекомендация: on для безопасности (off для макс. скорости)
+# Рекомендация: on для безопасности, off для макс. скорости (оставляем on для безопасности)
 fsync = on
 
 # Синхронизация WAL на диск
@@ -97,32 +99,32 @@ synchronous_commit = on
 # Включить автоматический вакуум
 autovacuum = on
 
-# Максимальное количество рабочих процессов автовакуума
-# Рекомендация: 2-4 в зависимости от CPU cores
-autovacuum_max_workers = 3
+# Максимальное количество рабочих процессов автоваркуума
+# Рекомендация: 2-4 в зависимости от CPU cores (снижено до 2)
+autovacuum_max_workers = 2
 
-# Частота автовакуума каждой таблицы
+# Частота автоваркуума каждой таблицы
 # Рекомендация: 1min для активных систем
 autovacuum_naptime = 1min
 
 # Порог для запуска VACUUM ANALYZE
 # Рекомендация: 10-20% изменений таблицы
-autovacuum_analyze_threshold = 500
+autovacuum_analyze_threshold = 10000
 
 # Порог для запуска VACUUM FULL
-# Рекомендация: 20% изменений таблицы
-autovacuum_vacuum_threshold = 5000
+# Рекомендация: 20% изменений таблицы (повышено для экономии места)
+autovacuum_vacuum_threshold = 20000
 
 # Процент таблицы для запуска VACUUM
-# Рекомендация: 10-20%
-autovacuum_vacuum_scale_factor = 0.1
+# Рекомендация: 10-20% (повышено до 30% для экономии места)
+autovacuum_vacuum_scale_factor = 0.3
 
 # Процент таблицы для запуска ANALYZE
 # Рекомендация: 5-10%
-autovacuum_analyze_scale_factor = 0.05
+autovacuum_analyze_scale_factor = 0.1
 
-# Максимальное время выполнения автовакуума
-# Рекомендация: 1 час для предотвращения долгих блокировок
+# Максимальное время выполнения автоваркуума
+# Рекомендация: 1 час для предотвращения долгих блокировок (оставляем)
 autovacuum_vacuum_cost_limit = -1
 
 #==============================================================================
@@ -135,7 +137,7 @@ log_min_error_statement = error
 
 # Логировать медленные запросы (в миллисекундах)
 # Рекомендация: 1000ms (1 секунда) для prod, 100ms для dev
-log_min_duration_statement = 1000
+log_min_duration_statement = 500
 
 # Логировать checkpoints
 log_checkpoints = on
@@ -151,12 +153,12 @@ log_destination = 'stderr'
 log_line_prefix = '%t [%p]: [%l-1] user=%u,db=%d,app=%a,client=%h '
 
 # Формат даты и времени в логах
-log_timezone = 'Europe/Moscow'
+log_timezone = 'UTC'
 
 # Включить log_stat_statements для анализа медленных запросов
 shared_preload_libraries = 'pg_stat_statements'
 pg_stat_statements.track = all
-pg_stat_statements.max = 1000
+pg_stat_statements.max = 500
 
 #==============================================================================
 # НАСТРОЙКИ ПОЛНОТЕКСТОВОГО ПОИСКА
@@ -185,7 +187,7 @@ enable_mergejoin = on
 log_explain = off
 
 #==============================================================================
-# РЕПЛИКАЦИЯ (если требуется)
+# ДРУГИЕ КОНФИГУРАЦИИ
 #==============================================================================
 
 # Режим репликации
@@ -194,7 +196,7 @@ wal_level = replica
 
 # Максимальное количество процессов репликации
 # Рекомендация: 2-4 для standby servers
-max_wal_senders = 3
+max_wal_senders = 2
 
 # Время ожидания для репликации (в миллисекундах)
 wal_sender_timeout = 60000
@@ -213,7 +215,7 @@ toast_tuple_target = 128
 default_page_size = 8192
 
 #==============================================================================
-# КОНФЛИКТЫ И БЛОКИРОВКИ
+# НАСТРОЙКИ И ОГРАНИЧЕНИЯ
 #==============================================================================
 
 # Тайм-аут для deadlock detection
@@ -225,18 +227,19 @@ deadlock_timeout = 1000
 lock_timeout = 30000
 
 # Включить deadlock detection (всегда включено для prod)
-log_lock_waits = on
+log_lock_waits = off  # Отключено для экономии ресурсов
 
 #==============================================================================
-# ОТКЛЮЧЕНИЕ СБОРНИКА СТАТИСТИКИ (для высокого параллелизма)
+# ОТКЛЮЧЕНИЕ СБОРА СТАТИСТИКИ (для высокого параллелизма)
 #==============================================================================
 
 # Параметры сбора статистики можно изменить для улучшения производительности
 # но не рекомендуется отключать полностью для prod
-track_activities = on
-track_counts = on
-track_io_timing = on
-track_functions = all
+# Для экономии ресурсов на слабом железе отключаем:
+track_activities = off
+track_counts = off
+track_io_timing = off
+track_functions = none
 
 #==============================================================================
 # РАЗНОЕ
@@ -246,7 +249,7 @@ track_functions = all
 client_encoding = 'UTF8'
 
 # Временная зона
-timezone = 'Europe/Moscow'
+timezone = 'UTC'
 
 # Включать ли autocommit (лучше оставить off для явного контроля транзакций)
 autocommit = off
@@ -260,7 +263,7 @@ statement_timeout = 300000
 idle_in_transaction_session_timeout = 1800000
 
 #==============================================================================
-# НАСТРОЙКИ СПЕЦИФИЧНЫЕ ДЛЯ FLIBUSTA
+# НАСТРОЙКИ СПЕЦИФИЧЕСКИЕ ДЛЯ FLIBUSTA
 #==============================================================================
 
 # Увеличенный work_mem для запросов поиска по авторам/книгам
@@ -269,11 +272,12 @@ idle_in_transaction_session_timeout = 1800000
 
 # Оптимизация для полнотекстового поиска с русским языком
 # Требует больше maintenance_work_mem для индексации
-# Уже установлено выше: maintenance_work_mem = 512MB
+# Уже установлено выше: maintenance_work_mem = 64MB
 
 # Количество файлов, которые PostgreSQL держит открытыми
 # Рекомендация: увеличить для высокой нагрузки (1000-2000)
-max_files_per_process = 2000
+# Снижено для экономии памяти
+max_files_per_process = 1000
 
 #==============================================================================
 # КОНЕЦ КОНФИГУРАЦИИ
