Enhance Docker Compose entrypoint for improved cache and SQL directory setup, add error handling for directory permissions, and implement detailed logging in app_import_sql.sh and app_reindex.sh for database connection checks and ZIP file processing. Update PHP configuration to increase memory limits and execution time for long-running operations.

--- a/phpdocker/php-fpm/php-fpm.conf
+++ b/phpdocker/php-fpm/php-fpm.conf
@@ -12,7 +12,8 @@ pm.max_spare_servers = 10
 pm.max_requests = 500
 
 ; Таймауты для предотвращения зависания процессов
-request_terminate_timeout = 300
+; Увеличено для длительных операций (импорт SQL, индексация ZIP)
+request_terminate_timeout = 7200
 request_slowlog_timeout = 300
 
 ; Логирование медленных запросов
